# provider_prior_auth_v1

./: .dockerignore  .env.example  .gitignore  AI_INTEGRATION.md  ARCHITECTURE.md  ARTIFACTS_MAP.md  CLAUDE.md  DEMO_SCENARIOS.md  DEPLOY.md  EXPERT_TESTING_GUIDE.md  HACKATHON_SCOPE.md  ORCHESTRATION.md  POLICIES.md  README.md  TESTING.md  WORKFLOW.md  WORKFLOWS.md  apply_submission_packet_patches.py  apply_textract_swap_patches.py  docker-compose.yml  fix_embedded_paths.py  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  prisma.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
CPT Codes/: cpt-codes.csv
penguinai-claude-artifacts-main/platform-backend-kit/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HLD.md  LLD.md  Makefile  PLATFORM_STANDARDS.md  README.md  docker-compose.yml  pyproject.toml
penguinai-claude-artifacts-main/platform-backend-kit/.github/workflows/: ci_template.yml
penguinai-claude-artifacts-main/platform-backend-kit/app/: celery_app.py  config.py  database.py  logging_config.py  main.py  redis.py  telemetry.py  tenant.py
penguinai-claude-artifacts-main/platform-backend-kit/app/common/: audit.py  cache.py  dependencies.py  error_handlers.py  exceptions.py  models.py  schemas.py
penguinai-claude-artifacts-main/platform-backend-kit/app/middleware/: auth.py  cors.py  logging.py  rate_limit.py  request_id.py  security.py  tenant.py
penguinai-claude-artifacts-main/platform-backend-kit/app/tests/: conftest.py
penguinai-claude-artifacts-main/platform-backend-kit/scripts/: start_worker.sh
services/ai/: .env.example  Dockerfile  attachment_intake.py  cache.py  code_derivation.py  config.py  document_intake.py  document_triage.py  evidence_extraction.py  logging_config.py  main.py  ocr.py  penguin_client.py  policy_ingestion.py  policy_rescrape.py  policy_to_markdown.py  pyproject.toml  submission_packet.py
services/ai/cli/: __init__.py  diff_curated_vs_ingested.py
services/ai/common/: audit.py  deps.py  error_handlers.py  exceptions.py  schemas.py
services/ai/evals/: document_triage_eval.py  policy_ingestion_eval.py
services/ai/middleware/: logging.py  request_id.py  security.py
services/ai/modules/derive_codes/: routes.py
services/ai/modules/extract_evidence/: routes.py
services/ai/modules/health/: routes.py
services/ai/modules/ingest_attachment/: routes.py
services/ai/modules/ingest_documents/: routes.py
services/ai/modules/ingest_policy/: routes.py
services/ai/prompts/: code_derivation_v1.py  cover_letter_v1.py  document_triage_v1.py  evidence_extraction_v1.py  policy_ingestion_v1.py
services/ai/tests/: conftest.py  test_code_derivation.py  test_document_intake.py  test_document_triage.py  test_evidence_extraction.py  test_health.py  test_policy_rescrape.py  test_policy_rescrape_s3.py  test_policy_to_markdown.py  test_submission_packet.py
services/ai/utils/: bbox.py  document_normalize.py
(+452 files in other folders)
