[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-backend-kit"
version = "0.1.0"
description = "Production-ready FastAPI backend starter kit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "beanie>=1.27.0",
    "pyjwt[crypto]>=2.8.0",
    "msal>=1.31.0",
    "pysaml2>=7.5.0",
    "boto3>=1.35.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "pymongo>=4.10.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "loguru>=0.7.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-celery>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-pymongo>=0.48b0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mongomock-motor>=0.0.30",
    "fakeredis>=2.25",
    "ruff>=0.8",
    "mypy>=1.13",
    "pip-tools>=7.4",
]
rabbitmq = [
    "celery[rabbitmq]",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "A", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
